su/ufw/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### limit any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 22 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 22 -j ufw-user-limit-accept

### tuple ### allow any 8097 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8097 -j ACCEPT
-A ufw-user-input -p udp --dport 8097 -j ACCEPT

### tuple ### allow any 49494 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 49494 -j ACCEPT
-A ufw-user-input -p udp --dport 49494 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 53 -j ACCEPT
-A ufw-user-output -p udp --dport 53 -j ACCEPT

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 DNS - in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw-user-input -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow any 137 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 137 -j ACCEPT
-A ufw-user-input -p udp --dport 137 -j ACCEPT

### tuple ### allow any 138 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 138 -j ACCEPT
-A ufw-user-input -p udp --dport 138 -j ACCEPT

### tuple ### allow any 139 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 139 -j ACCEPT
-A ufw-user-input -p udp --dport 139 -j ACCEPT

### tuple ### allow any 5355 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5355 -j ACCEPT
-A ufw-user-input -p udp --dport 5355 -j ACCEPT

### tuple ### allow any 8096 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8096 -j ACCEPT
-A ufw-user-input -p udp --dport 8096 -j ACCEPT

### tuple ### allow any 8920 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8920 -j ACCEPT
-A ufw-user-input -p udp --dport 8920 -j ACCEPT

### tuple ### allow any 1900 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1900 -j ACCEPT
-A ufw-user-input -p udp --dport 1900 -j ACCEPT

### tuple ### allow any 7359 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 7359 -j ACCEPT
-A ufw-user-input -p udp --dport 7359 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
