su/ufw/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### limit any 22 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw6-user-limit
-A ufw6-user-input -p tcp --dport 22 -j ufw6-user-limit-accept
-A ufw6-user-input -p udp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw6-user-input -p udp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw6-user-limit
-A ufw6-user-input -p udp --dport 22 -j ufw6-user-limit-accept

### tuple ### allow any 8097 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 8097 -j ACCEPT
-A ufw6-user-input -p udp --dport 8097 -j ACCEPT

### tuple ### allow any 49494 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 49494 -j ACCEPT
-A ufw6-user-input -p udp --dport 49494 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 53 -j ACCEPT
-A ufw6-user-output -p udp --dport 53 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 DNS - in
-A ufw6-user-input -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw6-user-input -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow any 137 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 137 -j ACCEPT
-A ufw6-user-input -p udp --dport 137 -j ACCEPT

### tuple ### allow any 138 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 138 -j ACCEPT
-A ufw6-user-input -p udp --dport 138 -j ACCEPT

### tuple ### allow any 139 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 139 -j ACCEPT
-A ufw6-user-input -p udp --dport 139 -j ACCEPT

### tuple ### allow any 5355 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 5355 -j ACCEPT
-A ufw6-user-input -p udp --dport 5355 -j ACCEPT

### tuple ### allow any 8096 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 8096 -j ACCEPT
-A ufw6-user-input -p udp --dport 8096 -j ACCEPT

### tuple ### allow any 8920 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 8920 -j ACCEPT
-A ufw6-user-input -p udp --dport 8920 -j ACCEPT

### tuple ### allow any 1900 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 1900 -j ACCEPT
-A ufw6-user-input -p udp --dport 1900 -j ACCEPT

### tuple ### allow any 7359 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 7359 -j ACCEPT
-A ufw6-user-input -p udp --dport 7359 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
